media/ombi/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ombi
  namespace: plex
  labels:
    app.kubernetes.io/name: ombi
    app.kubernetes.io/instance: ombi
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ombi
      app.kubernetes.io/instance: ombi
  serviceName: ""
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ombi
        app.kubernetes.io/instance: ombi
    spec:
      containers:
        - name: ombi
          image: docker.io/linuxserver/ombi:3.0.5216-ls28
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: config
          ports:
            - name: http
              containerPort: 3579
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /health
              port: http
      terminationGracePeriodSeconds: 60
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ombi-config
