media/ombi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ombi
  namespace: plex
  labels:
    app.kubernetes.io/name: ombi
    app.kubernetes.io/instance: ombi
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: ombi
    app.kubernetes.io/instance: ombi
